Centralize EventType